--- a/css/main.sass
+++ b/css/main.sass
@@ -1,6 +1,9 @@
 ---
 ---
 
+// To be in shared
+$site-highlight-color: #f62681
+
 @import 'syntax-highlighting'
 
 @import 'bourbon/bourbon'
@@ -13,8 +16,6 @@ $rs: 16px
 $font-serif: Merriweather, serif
 $font-sans: Jost, MundoSans, "Helvetica Neue", Arial, Helvetica, sans-serif
 
-//$site-highlight-color: #57ad68
-$site-highlight-color: #f62681
 
 @mixin respond-to($breakpoint)
   @media only screen and (max-width: $breakpoint + px)
