--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,4 +52,5 @@
 
   <link rel="stylesheet" type="text/css" media="screen" href="{{ "/css/main.css"  | prepend: site.baseurl  }}" />
   <link rel="stylesheet" type="text/css" media="print" href="{{ "/css/print.css"  | prepend: site.baseurl  }}" />
+  <link rel="stylesheet" type="text/css" media="screen" href="{{ "/css/tooltip.css"  | prepend: site.baseurl  }}" />
 </head>
