--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,12 +9,6 @@
       <article class="post">
         {% if page.image %}
         <div class="article-image">
-          <div class="post-image-image" style="background-image: url({% if page.image %}{{ page.image | prepend: site.baseurl }}{% endif %})">
-            Article Image
-          </div>
-          <div class="post-image-image2" style="background-image: url({% if page.image2 %}{{ page.image2 | prepend: site.baseurl }}{% endif %})">
-            Article Image
-          </div>
           <div class="post-meta">
             <h1 class="post-title">{{ page.title }}</h1>
             <div class="cf post-meta-text">
@@ -41,14 +35,8 @@
           </div>
         </div>
         <br>
-        <br>
-        <br>
         {% endif %}
         <section class="post-content">
-          <div class="post-reading">
-            <span class="post-reading-time"></span> read
-          </div>
-          <a name="topofpage"></a>
           {{content}}
         </section>
         <footer class="post-footer">
@@ -78,7 +66,7 @@
           <div class="isRight">
             <h5 class="index-headline featured"><span>RSS</span></h5>
             <footer class="site-footer">
-              <a class="subscribe" href="{{ "/feed.xml" | prepend: site.baseurl }}"> <span class="tooltip"> <i class="fa fa-rss"></i> Subscribe via RSS</span></a>
+              <a class="subscribe" href="{{ "/feed.xml" | prepend: site.baseurl }}"> <i class="fa fa-rss"></i> Subscribe via RSS</a>
               <div class="inner">
                 <section class="copyright">All content &copy; <a href="{{site.url}}/">{{site.author}}</a>, {{ site.time | date: '%Y' }}</section>
               </div>
