--- a/css/main.sass
+++ b/css/main.sass
@@ -80,10 +80,15 @@ body
     color: white
   .blog-title
     font-size: 70px
+    @media (max-width: 900px)
+      font-size: 50px
     text-align: center
     font-weight: 700
     margin-bottom: 20px
     text-shadow: 0px 0px 6px rgba(0, 0, 0, 1.0)
+  .blog-subtitle
+    text-align: center
+
   .custom-links
     position: absolute
     top: 10px
