--- a/css/tooltip.sass
+++ b/css/tooltip.sass
@@ -21,7 +21,7 @@ $content-max-width: 1024px
         width: 320px
     background-color: #353d5a
     color: #fff
-    text-align: center
+    text-align: left
     padding: 10px
     border-radius: 6px
     border-color: #000
