--- a/css/main.sass
+++ b/css/main.sass
@@ -471,6 +471,11 @@ body
         padding: 0 0 golden-ratio(1rem,  1)
     ol li
       list-style-type: decimal
+    .citation
+      padding-left: 2em
+      text-indent: -2em
+
+
   .bottom-teaser
     padding: 50px 0
     font-family: $font-sans
