--- a/_includes/head.html
+++ b/_includes/head.html
@@ -53,4 +53,14 @@
   <link rel="stylesheet" type="text/css" media="screen" href="{{ "/css/main.css"  | prepend: site.baseurl  }}" />
   <link rel="stylesheet" type="text/css" media="print" href="{{ "/css/print.css"  | prepend: site.baseurl  }}" />
   <link rel="stylesheet" type="text/css" media="screen" href="{{ "/css/tooltip.css"  | prepend: site.baseurl  }}" />
+
+  <!-- MailerLite Universal -->
+  <script>
+    (function(w,d,e,u,f,l,n){w[f]=w[f]||function(){(w[f].q=w[f].q||[])
+    .push(arguments);},l=d.createElement(e),l.async=1,l.src=u,
+    n=d.getElementsByTagName(e)[0],n.parentNode.insertBefore(l,n);})
+    (window,document,'script','https://assets.mailerlite.com/js/universal.js','ml');
+    ml('account', '864413');
+  </script>
+  <!-- End MailerLite Universal -->
 </head>
