Make front page contain citations

--- a/css/main.sass
+++ b/css/main.sass
@@ -176,6 +176,9 @@ body
       font-size: 20px
       line-height: 1.3
       color: #666665
+    .citation
+      padding-left: 2em
+      text-indent: -2em
     .post-meta
       font-size: 14px
       color: #b3b3b1
