Update paragraph and set descriptions in <head>

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,8 +17,8 @@
     <meta name="twitter:site" content="{{ site.twitter_handle }}" />
     <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
     <meta name="twitter:image" content="{{ site.logo | prepend: site.baseurl | prepend: site.url }}" />
-    {% if page.excerpt %}
-    <meta name="twitter:description"  content="{{ page.excerpt | strip_html | strip_newlines | truncate: 200 }}" />
+    {% if page.snippet %}
+    <meta name="twitter:description"  content="{{ page.snippet | strip_html | strip_newlines | truncate: 200 }}" />
     {% elsif site.description %}
     <meta name="twitter:description" content="{{ site.description | strip_html | strip_newlines | truncate: 200 }}" />
     {% endif %}
@@ -26,8 +26,8 @@
 
   <meta property="og:site_name" content="{{ site.title }}" />
   <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}"/>
-  {% if page.excerpt %}
-  <meta property="og:description" content="{{ page.excerpt | strip_html | strip_newlines | truncate: 200 }}" />
+  {% if page.snippet %}
+  <meta property="og:description" content="{{ page.snippet | strip_html | strip_newlines | truncate: 200 }}" />
   {% elsif site.description %}
   <meta property="og:description" content="{{ site.description | strip_html | strip_newlines | truncate: 200 }}" />
   {% endif %}
