--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 200 }}{% else %}{{ site.description }}{% endif %}" />
+  {% if page.snippet %}
+  <meta name="description" content="{{ page.snippet | strip_html | strip_newlines | truncate: 200 }}" />
+  {% else %}
+  <meta name="description" content="{{ site.description }}" />
+  {% endif %}
 
   <meta name="HandheldFriendly" content="True" />
   <meta name="MobileOptimized" content="320" />
