--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 <footer class="site-footer">
   <a class="subscribe" href="{{ "/feed.xml" | prepend: site.baseurl }}"> <span class="tooltip"> <i class="fa fa-rss"></i> Subscribe via RSS</span></a>
     <div class="inner">
-         <section class="copyright">All content &copy; {{ site.name }}, {{ site.time | date: '%Y' }}</section>
+         <section class="copyright">All content &copy; {{ site.name }}, 2024-{{ site.time | date: '%Y' }}</section>
 
     </div>
 </footer>
