--- a/css/main.sass
+++ b/css/main.sass
@@ -91,19 +91,89 @@ body
   .blog-subtitle
     text-align: center
 
+  .menu-toggle
+    display: none
+    position: absolute
+    top: 10px
+    right: 10px
+    background: transparent
+    border: none
+    cursor: pointer
+    z-index: 100
+    padding: 10px
+
+    .menu-icon
+      display: block
+      position: relative
+      width: 24px
+      height: 18px
+
+      .hamburger-bar
+        display: block
+        position: absolute
+        width: 100%
+        height: 2px
+        background-color: white
+        transition: all 0.3s ease
+
+        &:first-child
+          top: 0
+
+        &:nth-child(2)
+          top: 8px
+
+        &:last-child
+          top: 16px
+
+    &.active
+      .menu-icon
+        .hamburger-bar
+          &:first-child
+            transform: rotate(45deg)
+            top: 8px
+
+          &:nth-child(2)
+            opacity: 0
+
+          &:last-child
+            transform: rotate(-45deg)
+            top: 8px
+
+    @media (max-width: 768px)
+      display: block
+
   .custom-links
     position: absolute
     top: 10px
     left: 10px
     text-align: left
-
     margin: 0 0 50px
+
     a
       text-decoration: none
       color: #fff
       &:hover
         color: $site-highlight-color
       margin-right: 20px
+
+    @media (max-width: 768px)
+      position: fixed
+      top: 0
+      left: 0
+      right: 0
+      background-color: rgba(0, 0, 0, 0.9)
+      z-index: 99
+      text-align: center
+      padding: 60px 20px 20px
+      transform: translateY(-100%)
+      transition: transform 0.3s ease
+
+      &.active
+        transform: translateY(0)
+
+      a
+        display: block
+        margin: 10px 0
 
 .blog-header
   width: 100%
