--- a/css/main.sass
+++ b/css/main.sass
@@ -6,6 +6,49 @@ $site-highlight-color: #f62681
 $content-max-width: 1024px
 $tool-tip-width: 300px
 
+// Breadcrumbs styling
+.breadcrumbs
+  margin-bottom: 20px
+  padding: 10px 0
+  font-size: 0.9em
+  color: #666
+
+  ol
+    list-style: none
+    margin: 0
+    padding: 0
+    display: flex
+    flex-wrap: wrap
+    align-items: center
+
+  li
+    display: inline-block
+
+    &:not(:last-child):after
+      content: "/"
+      margin: 0 8px
+      color: #ccc
+
+  li[aria-current="page"]
+    color: #666
+    font-weight: 500
+
+  a
+    color: $site-highlight-color
+    text-decoration: none
+
+    &:hover
+      text-decoration: underline
+
+  @media (max-width: 600px)
+    font-size: 0.8em
+
+    li:not(:last-child):not(:first-child)
+      display: none
+
+    li:first-child:after
+      content: "..."
+
 @import 'syntax-highlighting'
 
 @import 'bourbon/bourbon'
