--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,12 @@
 <!-- footer start -->
 
-<footer class="site-footer">
-  <a class="subscribe" href="{{ "/feed.xml" | prepend: site.baseurl }}"> <span class="tooltip"> <i class="fa fa-rss"></i> Subscribe via RSS</span></a>
-    <div class="inner">
-         <section class="copyright">All content &copy; {{ site.name }}, 2024-{{ site.time | date: '%Y' }}</section>
-
-    </div>
+<footer class="site-footer" role="contentinfo">
+  <a class="subscribe" href="{{ "/feed.xml" | prepend: site.baseurl }}" aria-label="Subscribe to RSS feed">
+    <span class="tooltip"> <i class="fa fa-rss" aria-hidden="true"></i> Subscribe via RSS</span>
+  </a>
+  <div class="inner">
+    <section class="copyright">All content &copy; {{ site.name }}, 2024-{{ site.time | date: '%Y' }}</section>
+  </div>
 </footer>
 
 <!-- footer end -->
