--- a/_includes/definition.html
+++ b/_includes/definition.html
@@ -5,14 +5,19 @@
     {%- if include.plural and include.plural == true -%}
       {%- assign title = definition.title | append: 's' -%}
     {%- endif -%}
+    {%- if include.case and include.case == "lower" -%}
+      {%- assign title = title | downcase -%}
+    {%- endif -%}
     {%- assign definition_id = "definition-" | append: definition.term | append: "-" | append: include.term | append: "-" | append: forloop.index -%}
 
-    <span class="tooltip" tabindex="0" role="button" aria-describedby="{{ definition_id }}">{{ title }}
+    <span class="tooltip" tabindex="0" role="button" aria-describedby="{{ definition_id }}">
+      <a href="/glossary#{{ definition.term }}" class="glossary-term-link">{{ title }}</a>
       <span class="tooltiptext" id="{{ definition_id }}" role="tooltip">
         {{definition.def}}
         {%- if definition.wiki and definition.wiki != empty -%}
           <br><br><a href="https://en.wikipedia.org/wiki/{{ definition.wiki }}" target="_blank" aria-label="Learn more about {{ title }} on Wikipedia (opens in new tab)">More on Wikipedia</a>
         {%- endif -%}
+        <br><br><a href="/glossary#{{ definition.term }}">View in glossary</a>
       </span>
     </span>
     {%- assign term_found = true -%}
@@ -20,7 +25,7 @@
 {%- endfor -%}
 
 {%- if term_found == false -%}
-<span class="tooltip" tabindex="0" role="button" aria-describedby="missing-definition-{{include.term}}">MISSING_TERM: {{include.term}}
+<span class="tooltip tooltip-missing" tabindex="0" role="button" aria-describedby="missing-definition-{{include.term}}">MISSING_TERM: {{include.term}}
   <span class="tooltiptext" id="missing-definition-{{include.term}}" role="tooltip">MISSING DEFINITION: Please add this term.</span>
 </span>
 {%- endif -%}
