LD-JSON schemas

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 <html>
   {% include head.html %}
+  {% include research_paper_schema.html %}
   <body itemscope itemtype="http://schema.org/Article">
     {% include header.html %}
     <main class="content" role="main">
