Minor updatges to make pages more structured

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 ---
 <!DOCTYPE html>
-<html>
+<html lang="en">
   {% include head.html %}
   {% include research_paper_schema.html %}
   <body itemscope itemtype="http://schema.org/Article">
