--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
 
 <div class="teaserimage">
   <div class="teaserimage-image" {% if site.cover %}style="background-image: url({{ site.cover | prepend: site.baseurl }})"{% endif %}>
-    <div class="blog-title">{{ site.title }}</div>
+    <h1 class="blog-title">{{ site.title }}</h1>
     <div class="blog-subtitle">{{site.description}}</div>
 
     <button class="menu-toggle" aria-label="Toggle navigation menu" aria-expanded="false" aria-controls="site-navigation">
